--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>preview-card-component</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,11 +16,15 @@
 <div class="container">
 
 <div class="img-perfume-card">
-<img class="img-perfume" src="image-product-desktop.jpg" alt="img-perfume">
+<picture>
+<source media="(max-width:450px)" srcset="img/image-product-mobile.jpg"">
+        <img class="img-perfume" src="img/image-product-desktop.jpg" alt="img-perfume">
+</picture>
 </div>
 
 
 <div class="perfume-info">
+
 <p class="type-product">PERFUME</p>
 <h1 class="name-perfume">Gabrielle<br> Essence Eau <br> De Parfum</h1>
 
@@ -30,15 +34,19 @@
       Olivier Polge, Perfumer-Creator<br>
        for tha House of CHANEL.
 </p>
+
 <div class="price">
 <h2 class="perfume-price">$149.99</h2>
 <p class="old-price">$169.99</p>
+
+
 </div>
 
 
 <button class="btn-buy"> 
- <img class="icon-cart" src="icon-cart.svg" alt="icon-cart">   
+ <img class="icon-cart" src="img/icon-cart.svg" alt="icon-cart">   
     Add to cart</button>
+
 </div>
 
 
